<resources>
    <string name="app_name">18110371Yumme</string>
    <string name="slogan">With us, enjoy your healthy life !</string>
    <string name="hcmute">Mobile App - Final Project</string>
    <string name="welcomeBack">WELCOME BACK !</string>
    <string name="letslogin">Login to continue !!</string>
    <string name="hello">Hello, join with us ! </string>
    <string name="signup">Fill your info to Sign up</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_phone_exists">Phone Number Already Exists !!</string>
    <string name="text_accounts">All Accounts</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="update_success">Update Successfully !!</string>
    <string name="update_failed">Update Failed !!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>