<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#fff">

    <ImageView
        android:id="@+id/appName"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="100dp"
        android:src="@drawable/appname0" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="592dp"
        android:fontFamily="cursive"
        android:text="@string/slogan"
        android:layout_marginLeft="20dp"
        android:textColor="#8BC34A"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="391dp"
        android:layout_height="54dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/bungee"
        android:text="@string/welcomeBack"
        android:textColor="#424242"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/loginSlogan"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="190dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/letslogin"
        android:textColor="#424242"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/loginpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginSlogan"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login_panel"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/username"
            android:drawablePadding="10dp"
            android:hint="Username"
            android:paddingLeft="10dp"
            android:textColor="@color/avocado"
            android:textColorHint="#666666" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/pass"
            android:drawableRight="@drawable/eye"
            android:drawablePadding="10dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:textColor="@color/avocado"
            android:textColorHint="#666666" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:gravity="right"
            android:text="Forgot password"
            android:textColor="#666666"
            android:textSize="20dp" />
        <Button
            android:id="@+id/btlogin"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonbg"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:includeFontPadding="true"
            android:text="login"
            android:textSize="30dp" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/facebookgoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginpanel"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="70dp">

        <ImageButton
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="89dp"
            android:background="@drawable/google" />

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="90dp"
            android:background="@drawable/facebook" />
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/border"
        android:text="new user ? sign up"
        android:textColor="@color/avocado"
        android:textSize="20dp" />

</RelativeLayout>