<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/nestedScrollView"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/appName"
        android:layout_width="154dp"
        android:layout_height="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/appname0" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="-29dp"
        android:fontFamily="cursive"
        android:text="@string/slogan"
        android:textColor="#8BC34A"
        android:textSize="12dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="256dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:layout_alignTop="@+id/slogan"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/bungee"
        android:text="@string/hello"
        android:textColor="#424242"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/loginSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeBack"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/signup"
        android:textColor="#424242"
        android:textSize="15dp" />



    <LinearLayout
        android:id="@+id/loginpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginSlogan"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:background="@drawable/shape_login_panel"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/loginSlogan"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:maxHeight="300dp"
            android:minHeight="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/cat_avatar"
            android:layout_marginBottom="10dp"
            />

<!--        <EditText-->
<!--            android:id="@+id/username"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:background="@drawable/border"-->
<!--            android:drawableLeft="@drawable/username"-->
<!--            android:drawablePadding="10dp"-->
<!--            android:hint="Username"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:textColor="@color/avocado"-->
<!--            android:textColorHint="#666666" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_phone"
            app:passwordToggleTint="@color/avocado"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="#666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="10dp"
                android:hint="Phone Number"
                android:paddingLeft="10dp"
                android:textColor="@color/avocado">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_full_name"
            app:passwordToggleTint="@color/avocado"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="#666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/fullname"
                android:drawablePadding="10dp"
                android:hint="Fullname"
                android:paddingLeft="10dp"
                android:textColor="@color/avocado">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            app:passwordToggleTint="@color/avocado"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="#666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="10dp"
                android:hint="Email"
                android:paddingLeft="10dp"
                android:textColor="@color/avocado">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTintMode="multiply"
            app:passwordToggleTint="@color/avocado"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="#666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:drawableStart="@drawable/pass"
                android:drawableTintMode="add"
                android:drawablePadding="10dp"
                android:hint="Password"
                android:paddingLeft="10dp"
                android:textColor="@color/avocado">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_re_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/avocado"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="#666666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/re_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Repeat Password"
                android:drawableStart="@drawable/repeat"
                android:background="@drawable/border"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"
                android:textColor="@color/avocado">
            </com.google.android.material.textfield.TextInputEditText>

            <ProgressBar
                android:id="@+id/pbRegister"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/inputRePass"
                android:layout_centerInParent="true"
                android:visibility="invisible"
                android:layout_gravity="center"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button_signin"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:includeFontPadding="true"
                android:textColor="@color/avocado"
                android:text="Sign in"
                android:textSize="20dp"
                />

            <Button
                android:id="@+id/button_signup"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:background="@drawable/buttonbg"
                android:fontFamily="monospace"
                android:includeFontPadding="true"
                android:text="Sign up"
                android:textSize="20dp" />

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>